@@ -9920,7 +9920,7 @@ lv=3
 dt=Text
 nm=win.GetFileTimes
 ctime=3790916234
-mtime=3790917671
+mtime=3968140988
 <article>
 #_times = win.GetFileTimes (FileName)
 #_
@@ -9933,12 +9933,13 @@ mtime=3790917671
 #_      LastWriteTime:      `bit64-userdata`
 #_      LastAccessTime:     `bit64-userdata`
 #_      CreationTime:       `bit64-userdata`
+#_      ChangeTime:         `bit64-userdata`
 #_
 #_**Note:**
 #_  All time values are expressed in 100-ns intervals elapsed since 1601-01-01,00:00:00.
 #_
 #_**Windows API used:**
-#_  CreateFile, GetFileTime
+#_  CreateFile, NtQueryInformationFile
 #_
 #_@@@
 #_[bit64-userdata]: 405.html
@@ -10154,7 +10155,7 @@ lv=3
 dt=Text
 nm=win.SetFileTimes
 ctime=3790916254
-mtime=3790917726
+mtime=3968141009
 <article>
 #_result = win.SetFileTimes (FileName, times)
 #_
@@ -10165,6 +10166,7 @@ mtime=3790917726
 #_      LastWriteTime:      `bit64-userdata` or number
 #_      LastAccessTime:     `bit64-userdata` or number
 #_      CreationTime:       `bit64-userdata` or number
+#_      ChangeTime:         `bit64-userdata` or number
 #_
 #_**Returns:**
 #_  result:   boolean
@@ -10173,7 +10175,7 @@ mtime=3790917726
 #_  All time values are expressed in 100-ns intervals elapsed since 1601-01-01,00:00:00.
 #_
 #_**Windows API used:**
-#_  CreateFile, SetFileTime
+#_  CreateFile, NtSetInformationFile
 #_
 #_@@@
 #_[bit64-userdata]: 405.html
